--- a/blogPost.html
+++ b/blogPost.html
@@ -10,5 +10,6 @@
 <body>
   <h1>Aqui vamos a hacer un blog del post</h1>
   <p>parrafo de inicio</p>
+  <p>Este es otro parrafo</p>
 </body>
 </html>
