--- a/blogPost.html
+++ b/blogPost.html
@@ -8,8 +8,12 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <h1>Aqui vamos a hacer un blog del post</h1>
-  <p>parrafo de inicio</p>
-  <p>Este es otro parrafo</p>
+  <div id="container">
+    <div id="post">
+      <h1>Aqui vamos a hacer un blog del post</h1>
+      <p>parrafo de inicio</p>
+      <p>Este es otro parrafo</p>
+    </div>
+  </div>
 </body>
 </html>
