--- a/blogPost.html
+++ b/blogPost.html
@@ -9,10 +9,13 @@
 </head>
 <body>
   <div id="container">
-    <div id="post">
-      <h1>Aqui vamos a hacer un blog del post</h1>
-      <p>parrafo de inicio</p>
-      <p>Este es otro parrafo</p>
+    <div id="cabecera">
+        Cabecera
+      <div id="post">
+        <h1>Aqui vamos a hacer un blog del post</h1>
+        <p>parrafo de inicio</p>
+        <p>Este es otro parrafo</p>
+      </div>
     </div>
   </div>
 </body>
