--- a/blogPost.html
+++ b/blogPost.html
@@ -10,12 +10,15 @@
 <body>
   <div id="container">
     <div id="cabecera">
-        Cabecera
-      <div id="post">
+        HyperBlog
+        <span id="tagline">
+          Tu blog de confianza
+        </span>
+    </div>
+    <div id="post">
         <h1>Aqui vamos a hacer un blog del post</h1>
         <p>parrafo de inicio</p>
         <p>Este es otro parrafo</p>
-      </div>
     </div>
   </div>
 </body>
