--- a/blogPost.html
+++ b/blogPost.html
@@ -13,6 +13,7 @@
       <h1>Aqui vamos a hacer un blog del post</h1>
       <p>parrafo de inicio</p>
       <p>Este es otro parrafo</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos exercitationem sunt provident dolor delectus nostrum deleniti! Quam, omnis? Minima fuga dolorum dicta error accusamus provident distinctio, rem nesciunt quibusdam praesentium!</p>
     </div>
   </div>
 </body>
