cambie la cabezera agrege datos

--- a/blogPost.html
+++ b/blogPost.html
@@ -12,7 +12,7 @@
     <div id="cabecera">
         HyperBlog
         <span id="tagline">
-          Tu blog de confianza
+          Tu blog de maestro
         </span>
     </div>
     <div id="post">
@@ -20,6 +20,7 @@
       <p>parrafo de inicio</p>
       <p>Este es otro parrafo</p>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos exercitationem sunt provident dolor delectus nostrum deleniti! Quam, omnis? Minima fuga dolorum dicta error accusamus provident distinctio, rem nesciunt quibusdam praesentium!</p>
+      <p>Suscribete y dale like</p>
     </div>
   </div>
 </body>
