cambio color de fondo logo

--- a/blogPost.html
+++ b/blogPost.html
@@ -10,16 +10,17 @@
 <body>
   <div id="container">
     <div id="cabecera">
-        HyperBlog
-        <span id="tagline">
-          Tu blog de cabecera
-        </span>
+      <img id="logo" src="./imagenes/dragon.png" alt="logo">
+      HyperBlog
+      <span id="tagline">
+        Tu blog de cabecera
+      </span>
     </div>
     <div id="post">
-      <h1>Aqui vamos a hacer un blog del post</h1>
-      <p>parrafo de inicio</p>
-      <p>Este es otro parrafo</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos exercitationem sunt provident dolor delectus nostrum deleniti! Quam, omnis? Minima fuga dolorum dicta error accusamus provident distinctio, rem nesciunt quibusdam praesentium!</p>
+      <h1>Aqui vamos a hacer un blog del post <br></h1>
+      <p>parrafo de inicio <br></p>
+      <p>Este es otro parrafo <br></p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos exercitationem sunt provident dolor delectus nostrum deleniti! Quam, omnis? Minima fuga dolorum dicta error accusamus provident distinctio, rem nesciunt quibusdam praesentium! <br></p>
       <p>Suscribete y dale like</p>
     </div>
   </div>
