--- a/blogPost.html
+++ b/blogPost.html
@@ -19,9 +19,12 @@
       <h1>Aqui vamos a hacer un blog del post</h1>
       <p>parrafo de inicio</p>
       <p>Este es otro parrafo</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos exercitationem sunt provident dolor delectus nostrum deleniti! Quam, omnis? Minima fuga dolorum dicta error accusamus provident distinctio, rem nesciunt quibusdam praesentium!</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos </p>
       <p>Suscribete y dale like</p>
     </div>
   </div>
+  <footer>
+    <p id="footer">Hecho con amor en platzi </p>
+  </footer>
 </body>
 </html>
