correccion de error en parrafo

--- a/blogPost.html
+++ b/blogPost.html
@@ -17,12 +17,11 @@
       </span>
     </div>
     <div id="post">
-      <h1>Aqui vamos a hacer un blog del post <br></h1>
-      <p>parrafo de inicio <br></p>
-      <p>Este es otro parrafo <br></p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos exercitationem sunt provident dolor delectus nostrum deleniti! Quam, omnis? Minima fuga dolorum dicta error accusamus provident distinctio, rem nesciunt quibusdam praesentium! <br></p>
+      <h1> Como ser millonario </h1>
+      <p>las 5 cualidades del millonario </p>
+      <p>Consejos de freddy vega </p>
+      <p>Con esta introduccion nos adentraremos en el maravilloso mundo de los millonarios, listos para conquistar el mundo </p>
       <p>Suscribete y dale like</p>
-    </div>
   </div>
   <footer>
     <p id="footer">Hecho con amor en platzi </p>
