correccion de error en parrafo y div

--- a/blogPost.html
+++ b/blogPost.html
@@ -22,6 +22,7 @@
       <p>Consejos de freddy vega </p>
       <p>Con esta introduccion nos adentraremos en el maravilloso mundo de los millonarios, listos para conquistar el mundo </p>
       <p>Suscribete y dale like</p>
+    </div>
   </div>
   <footer>
     <p id="footer">Hecho con amor en platzi </p>
