se acomodo la imagen

--- a/blogPost.html
+++ b/blogPost.html
@@ -20,7 +20,7 @@
       <h1>Aqui vamos a hacer un blog del post <br></h1>
       <p>parrafo de inicio <br></p>
       <p>Este es otro parrafo <br></p>
-      <p><img src="./imagenes/cover.png" alt="portada"></p>
+      <p><img src="./imagenes/cover.png" alt="portada" width="100%"></p>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos exercitationem sunt provident dolor delectus nostrum deleniti! Quam, omnis? Minima fuga dolorum dicta error accusamus provident distinctio, rem nesciunt quibusdam praesentium! <br></p>
       <p>Suscribete y dale like</p>
     </div>
