--- a/blogPost.html
+++ b/blogPost.html
@@ -13,7 +13,7 @@
       <img id="logo" src="./imagenes/dragon.png" alt="logo">
       HyperBlog
       <span id="tagline">
-        Tu blog de cabecera
+        Tu blog de cabecera en estado veloz
       </span>
     </div>
     <div id="post">
